# xrayr

./: .editorconfig  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  mainform.cpp  mainform.h  mainform.ui  stable.h
